--- a/templates/manager.html
+++ b/templates/manager.html
@@ -3,14 +3,14 @@
         <h2 class="card-title"><div id=name>
             
         </div></h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>"{{role}}"</h3>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{role}}</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: {{id}}</li>
             <li class="list-group-item">Email: <a href="mailto:{{email1}}">
               {{email2}}  </a></li>
-            <li class="list-group-item">"Office number: {{officeNumber}}"</li>
+            <li class="list-group-item">Office number: {{officeNumber}}"</li>
         </ul>
     </div>
 </div>
